--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
   aperiam illum nobis, dolorum rem quam inventore, reprehenderit perspiciatis
   eum excepturi facere autem, debitis soluta aspernatur iusto maiores labore.
 </p>
+<button>Click me!</button>
